--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -1,5 +1,9 @@
 .Banner {
-  padding: 8px 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 16px 20px;
   margin-bottom: 30px;
 
   color: #fff;
@@ -8,6 +12,4 @@
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
-
-  text-align: center;
 }
