--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,27 @@ body {
 
   z-index: 1;
 }
+
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.custom-file-input::before {
+  content: "Fotoğraf Seç";
+  display: block;
+
+  border: 1px solid #666;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+
+  cursor: pointer;
+
+  font-weight: 700;
+  font-size: 12px;
+}
+
+.custom-file-input:hover::before {
+  border-color: black;
+}
