--- a/src/styles/ImageUpload.module.css
+++ b/src/styles/ImageUpload.module.css
@@ -41,5 +41,8 @@
   width: 40%;
   height: auto;
 
-  object-fit: contain;
+  width: 40%;
+  height: 40%;
+  border-radius: 50%;
+  object-fit: cover;
 }
